--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="src/js/main.js"></script>
   <link rel="stylesheet" href="src/css/styles.css">
 </head>
-<body>
+<body id="body">
 	<div id="dvContain"></div>
 </body>
 </html>
